--- a/index.ipynb
+++ b/index.ipynb
@@ -1562,7 +1562,8 @@
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    return slope(x_values, y_values) * x_values + y_intercept(x_value, b, m)"
+    "    x_values\n",
+    "    return slope(x_values, y_values) * x_values + y_intercept(x_values, y_values, m)"
    ]
   },
   {
